@@ -1,3 +1,8 @@
+2005-07-26  Hector Garcia <hector@debian.org>
+	* md5c.c: Changed depend to "md5.h"
+	* md5.h: Included it from sys/md5.h
+	* Makefile: Changed it to compile md5c.c
+
 2005-07-25  Guillem Jover  <guillem@debian.org>
 
 	* fgetln.c (fgetln): Reindent, remove commented code and translate
